--- a/.example.env
+++ b/.example.env
@@ -1,10 +1,41 @@
-PORT=12000
+PORT=
 
-MGHOST=localhost
-MGUSER=imagineuser
-MGPASSWORD=qwerty123
-MGPORT=27017
+# AWS
+
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_BUCKET=
 
 
-MONGODB_CNN=mongodb://imagineuser:qwerty123@localhost:27017/?authMechanism=DEFAULT
-SECRETORPRIVATEKEY=ueccvA0erqtnHdrm
+# DISCORD
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_TOKEN=
+
+# FEATURES
+
+FEATURE_USE_HISTORY_PRICES=
+DISPLAY_TRAIT_ICONS=
+
+# DATABASE
+
+MONGODB_URL=
+
+#BOT
+
+SHARDS_TOTAL=
+SHARDS_TO_SPAWN=
+
+#JWT
+SECRETORPRIVATEKEY=
+
+
+
+
+# ALBION
+
+HTTP_ALBION_GAME_INFO=
+HTTP_ALBION_GAME_RENDER=
+
