--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imagineapp",
+  "name": "albion-killbot",
   "version": "1.0.0",
-  "description": "test imagineApp",
+  "description": "albion killbot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
